--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://syst.top"
+baseURL = "https://www.syst.top"
 languageCode = "zh-hans"
 defaultContentLanguage = "en"
 title = "记得"
