--- a/config.toml
+++ b/config.toml
@@ -86,15 +86,21 @@ googleAnalytics = "UA-166045776-1"
     url = "posts/"
     weight = 10
 
+
+  [[menu.nav]]
+    name = "外文翻译"
+    url = "translations/"
+    weight = 10
+
   [[menu.nav]]
     name = "生活"
     url = "lives/"
     weight = 10
 
-   [[menu.nav]]
-    name = "Go面试题集锦"
-    url = "https://go.aabbccm.com"
-    weight = 12
+#    [[menu.nav]]
+#     name = "Go面试题集锦"
+#     url = "https://go.aabbccm.com"
+#     weight = 12
 
 
 
