--- a/config.toml
+++ b/config.toml
@@ -86,16 +86,22 @@ googleAnalytics = "UA-166045776-1"
     url = "posts/"
     weight = 10
 
-
   [[menu.nav]]
     name = "外文翻译"
     url = "translations/"
     weight = 10
 
+
+  [[menu.nav]]
+    name = "leetcode"
+    url = "leetcode/"
+    weight = 9
+
   [[menu.nav]]
     name = "生活"
     url = "lives/"
     weight = 10
+
 
 #    [[menu.nav]]
 #     name = "Go面试题集锦"
